logs/dag_id=weather_dag_api/run_id=manual__2023-04-27T06:51:39.617091+00:00/task_id=cities.insert_data_Lviv/attempt=1.log
[2023-04-27T06:52:18.868+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Lviv manual__2023-04-27T06:51:39.617091+00:00 [queued]>
[2023-04-27T06:52:18.996+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Lviv manual__2023-04-27T06:51:39.617091+00:00 [queued]>
[2023-04-27T06:52:18.997+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T06:52:18.998+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-27T06:52:18.999+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T06:52:19.132+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Lviv> on 2023-04-27 06:51:39.617091+00:00
[2023-04-27T06:52:19.611+0000] {standard_task_runner.py:55} INFO - Started process 321 to run task
[2023-04-27T06:52:19.686+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Lviv', 'manual__2023-04-27T06:51:39.617091+00:00', '--job-id', '44', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpvwigaylr']
[2023-04-27T06:52:19.697+0000] {standard_task_runner.py:83} INFO - Job 44: Subtask cities.insert_data_Lviv
[2023-04-27T06:52:20.649+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Lviv manual__2023-04-27T06:51:39.617091+00:00 [running]> on host 80d943d8f5b4
[2023-04-27T06:52:21.620+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Lviv
AIRFLOW_CTX_EXECUTION_DATE=2023-04-27T06:51:39.617091+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-27T06:51:39.617091+00:00
[2023-04-27T06:52:21.628+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES (2023-04-26T10:20:00Z,
				6.2,
				0.0,
				6.6,
				Lviv);
[2023-04-27T06:52:21.682+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T06:52:30.697+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T06:52:30.721+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES (2023-04-26T10:20:00Z,
				6.2,
				0.0,
				6.6,
				Lviv);, parameters: None
[2023-04-27T06:52:30.740+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "T10"
LINE 2:     VALUES (2023-04-26T10:20:00Z,
                              ^

[2023-04-27T06:52:31.276+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Lviv, execution_date=20230427T065139, start_date=20230427T065218, end_date=20230427T065231
[2023-04-27T06:52:31.956+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 44 for task cities.insert_data_Lviv (syntax error at or near "T10"
LINE 2:     VALUES (2023-04-26T10:20:00Z,
                              ^
; 321)
[2023-04-27T06:52:32.470+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-27T06:52:32.694+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
